code/examples/stderr/borrowck_2.stderr
error[E0308]: mismatched types
 --> examples/borrowck_2.rs:7:5
  |
7 |     consume_fn(fnptr);
  |     ^^^^^^^^^^^^^^^^^ one type is more general than the other
  |
  = note: expected reference `&'a _`
             found reference `&_`
note: the lifetime requirement is introduced here
 --> examples/borrowck_2.rs:3:48
  |
3 | fn consume_fn<R, F: for<'a> FnOnce(&'a u32) -> R>(_: F) {}
  |                                                ^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `code` (example "borrowck_2") due to 1 previous error
